<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.AddBookActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtAddBookTitle"
            style="@style/txtTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/etBookName"
            style="@style/etStyle"
            android:hint="@string/enter_book_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtAddBookTitle"
            android:textColorHint="@color/design_default_color_primary"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/etAuthorName"
            style="@style/etStyle"
            android:hint="@string/enter_author_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etBookName"
            android:textColorHint="@color/design_default_color_primary"
            tools:ignore="TextContrastCheck" />

        <Spinner
            android:id="@+id/mSpinner"
            style="@style/etStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAuthorName"
            tools:ignore="SpeakableTextPresentCheck" />

        <RadioGroup
            android:id="@+id/radioGroup"
            style="@style/rgStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mSpinner"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/rFiction"
                style="@style/rbStyle"
                android:checked="true"
                android:text="@string/fiction" />

            <RadioButton
                android:id="@+id/rNonFiction"
                style="@style/rbStyle"
                android:text="@string/nonfiction" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@color/design_default_color_primary"
            android:hint="@string/set_launching_date_of_book"
            android:importantForAutofill="no"
            android:padding="@dimen/padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <TextView
            android:id="@+id/txtAgeGrp"
            style="@style/txtStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDate"
            android:text="@string/select_age_group_suitable_for_book_read" />



            <CheckBox
                android:id="@+id/cChild"
                style="@style/checkStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAgeGrp"
                android:text="@string/below_18" />

            <CheckBox
                android:id="@+id/cAdult"
                style="@style/checkStyle"
                app:layout_constraintStart_toEndOf="@id/cChild"
                app:layout_constraintTop_toBottomOf="@id/txtAgeGrp"
                android:text="@string/_18_to_60" />

            <CheckBox
                android:id="@+id/cSixtyPulse"
                style="@style/checkStyle"
                app:layout_constraintStart_toEndOf="@id/cAdult"
                app:layout_constraintTop_toBottomOf="@id/txtAgeGrp"
                android:text="@string/_60" />

        <Button
            android:id="@+id/btnAddBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cChild"
            android:layout_margin="@dimen/margin"
            android:text="@string/addBook" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



